# CallAgent

./: .gitignore  README.md  agent.js  package-lock.json  package.json  sample.env
openairealtime-with-rag/: index.ts  package-lock.json  package.json  tsconfig.json
twilio-azure/: agent.ts  package-lock.json  package.json  sample.env  tsconfig.json
twilio-with-azure-pipecat/: agent.py  pyproject.toml  requirements.txt  server.py
